--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
         </div>
       </div>
 
-      <div class="row-wrapper">
+      <div class="spacer-sm"></div>
+      <div class="cards-wrapper">
         <div class="cards-container">
-          <div class="card rules">
+          <div class="card card-one rules">
             <div class="card-image">
               <img src="7vs7-player.jpg">
             </div>
@@ -59,7 +60,7 @@
               <a class="link"></a>
             </div>
           </div>
-          <div class="card efficacy">
+          <div class="card two efficacy">
             <div class="card-image">
               <img src="7vs7-player.jpg">
             </div>
@@ -69,7 +70,7 @@
               <a class="link"></a>
             </div>
           </div>
-          <div class="card audience">
+          <div class="card three audience">
             <div class="card-image">
               <img src="7vs7-player.jpg">
             </div>
@@ -79,7 +80,7 @@
               <a class="link"></a>
             </div>
           </div>
-          <div class="card subscribe">
+          <div class="card four subscribe">
             <div class="card-image">
               <img src="7vs7-player.jpg">
             </div>
@@ -90,6 +91,22 @@
             </div>
           </div>
         </div>
+
+        <div class="slider-control">
+          <div class="slider-dots">
+            <div class="dot dot-one active"></div>
+            <div class="dot dot-two"></div>
+          </div>
+          <div class="slider-arrows">
+            <div class="slider-arrow slider-arrow-left inactive">
+              <img class="icon-arrow" src="slider-arrow-white.svg" onclick="moveRight()"></img>
+            </div>
+            <div class="slider-arrow slider-arrow-right">
+              <img class="icon-arrow" src="slider-arrow-white.svg" onclick="moveLeft()"></img>
+            </div>
+          </div>
+        </div>
+
       </div>
 
 
