--- a/form.html
+++ b/form.html
@@ -2,9 +2,9 @@
 
 <html>
   <head>
-    <title>7vs7</title>
+    <title>7vs7 Formulier</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-    <link rel="icon" type="image/png" href="7V7HAARLEM.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
@@ -13,6 +13,86 @@
   </head>
 
   <body>
+    <header>
+      <div class="header-container">
+        <div class="menu-icon">
+          <div class="menu-line"></div>
+          <div class="menu-line"></div>
+          <div class="menu-line"></div>
+        </div>
+        <div class="logo">
+          <a href="index.html">
+            <img alt="7vs7" src="7V7-logo.png">
+          </a>
+        </div>
+        <div class="nav-menu">
+          <div class="menu-item link">Locatie</div>
+          <div class="menu-item link">Contact</div>
+        </div>
+      </div>
+    </header>
 
+    <div class="page-wrapper">
+
+      <div class="banner banner-with-form">
+        <div class="banner-wrapper">
+          <div class="headings">
+            <div class="7v7-wrapper">
+              <h1 class="number">7</h1><h1 class="versus">versus</h1><h1 class="number">7</h1>
+            </div>
+            <h2>Het haarlemse voetbaltoernooi!</h2>
+          </div>
+          <div class="form-container">
+            <form class="submit-form">
+              <div class="form-input">
+                <div class="label">Voornaam (Verplicht)</div>
+                <input class="input first-name" placeholder="Voornaam">
+              </div>
+              <div class="form-input">
+                <div class="label">Achternaam (Verplicht)</div>
+                <input class="input last-name" placeholder="Achternaam">
+              </div>
+              <div class="form-input">
+                <div class="label">Telefoonnummer (Verplicht)</div>
+                <input class="input phone-number" placeholder="Telefoonnummer">
+              </div>
+              <div class="form-input">
+                <div class="label">Emailadres (Verplicht)</div>
+                <input class="input email-address" placeholder="Emailadres">
+              </div>
+              <div class="radio-label">
+                Wil je je inschrijven als team of als individu?
+              </div>
+              <div class="form-input">
+                <div class="radio-button">
+                  <input type="radio" id="team" name="team-or-individu" value="team" onchange="showTeam()">
+                  <label for="team">Team</label>
+                </div>
+                <div class="radio-button">
+                  <input type="radio" id="individu" name="team-or-individu" value="individu" onchange="hideTeam()">
+                  <label for="individu">Individueel</label>
+                </div>
+              </div>
+              <div class="form-input team-name-input">
+                <div class="label">Teamnaam (Optioneel)</div>
+                <input class="input team-name" placeholder="Teamnaam">
+              </div>
+              <div class="submit-button" onclick="displayForm()">
+                Meld je nu aan!
+              </div>
+            </form>
+          </div>
+          <div class="image">
+            <img alt="7vs7-banner" src="7vs7-banner.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="spacer-sm"></div>
+
+    </div>
+    <div class="spacer-sm"></div>
+    <footer></footer>
+    <script src="form.js"></script>
   </body>
 </html>
