--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/23ac1fdc5c.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -26,12 +27,21 @@
           </a>
         </div>
         <div class="nav-menu">
-          <div class="menu-item link">Locatie</div>
-          <div class="menu-item link">Contact</div>
+          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="contact.html">Contact</a>
+          <div class="menu-item dropdown-link">Informatie
+            <div class="dropdown-container">
+              <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
+              <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
+              <a class="menu-item link" href="regels.html">Regels</a>
+              <a class="menu-item link" href="kosten.html">Prijzen</a>
+            </div>
+          </div>
           <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
         </div>
       </div>
     </header>
+
     <div class="page-wrapper">
 
       <div class="banner">
@@ -49,6 +59,24 @@
       </div>
 
       <div class="spacer-sm"></div>
+
+      <div class="usps">
+        <div class="usp">
+          <i class="fa-regular fa-futbol usp-icon"></i>
+          <h3>Sportief</h3>
+        </div>
+        <div class="usp">
+          <i class="fa-solid fa-users usp-icon"></i>
+          <h3>Sociaal</h3>
+        </div>
+        <div class="usp">
+          <i class="fa-regular fa-face-smile usp-icon"></i>
+          <h3>Plezier</h3>
+        </div>
+      </div>
+
+      <div class="spacer-sm"></div>
+
       <div class="cards-wrapper">
         <div class="cards-container">
           <div class="card card-one efficacy">
@@ -139,7 +167,19 @@
 
     </div>
     <div class="spacer-sm"></div>
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <img alt="7vs7" src="7V7-logo.png">
+        <div class="footer-menu-items">
+          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="contact.html">Contact</a>
+          <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
+          <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
+          <a class="menu-item link" href="regels.html">Regels</a>
+          <a class="menu-item link" href="kosten.html">Prijzen</a>
+        </div>
+      </div>
+    </footer>
     <script src="home.js"></script>
   </body>
 </html>
