--- a/regels.html
+++ b/regels.html
@@ -53,7 +53,8 @@
 
       <div class="info-wrapper">
         <div class="row">
-          <div class="7v7-info">
+          <div class="versus-info">
+            <h2 class="list-title">Spelvorm</h2>
             <ul class="unordered-list">
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Er word gespeeld op een half veld</li>
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Elke wedstrijd duurt 2x 25minuten (+ wisselen van helft)</li>
@@ -78,6 +79,9 @@
           </div>
         </div>
         <div class="spacer-sm"></div>
+        <div class="title-wrapper">
+          <h2 class="list-title">Spelregels</h2>
+        </div>
         <div class="row">
           <div class="image">
             <img src="img-info.jpg">
