--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="cards-container">
           <div class="card card-one efficacy">
             <div class="card-image">
-              <img src="7vs7-player.jpg">
+              <img src="7vs7-how-work.jpg">
               <img class="logo-in-card" src="7V7-logo.png">
             </div>
             <div class="card-body">
@@ -95,7 +95,7 @@
           </div>
           <div class="card audience">
             <div class="card-image">
-              <img src="7vs7-player.jpg">
+              <img src="7vs7-image-goal.jpg">
             </div>
             <div class="card-body">
               <h2 class="card-title">Voor wie is het?</h2>
@@ -108,7 +108,7 @@
           </div>
           <div class="card rules">
             <div class="card-image">
-              <img src="7vs7-player.jpg">
+              <img src="7vs7-rules.jpg">
             </div>
             <div class="card-body">
               <h2 class="card-title">Regels</h2>
@@ -121,7 +121,7 @@
           </div>
           <div class="card costs">
             <div class="card-image">
-              <img src="7vs7-player.jpg">
+              <img src="7vs7-price.jpg">
             </div>
             <div class="card-body">
               <h2 class="card-title">Wat kost het?</h2>
@@ -133,7 +133,7 @@
           </div>
           <div class="card subscribe">
             <div class="card-image">
-              <img src="7vs7-player.jpg">
+              <img src="7vs7-beker-2.jpg">
               <img class="logo-in-card" src="7V7-logo.png">
             </div>
             <div class="card-body">
