--- a/regels.html
+++ b/regels.html
@@ -38,7 +38,7 @@
     <div class="page-wrapper">
 
       <div class="banner">
-        <div class="banner-wrapper">
+        <div class="banner-wrapper rules">
           <div class="headings">
             <h2>Regels voor</h2>
             <div class="7v7-wrapper">
@@ -84,7 +84,7 @@
         </div>
         <div class="row">
           <div class="image">
-            <img src="img-info.jpg">
+            <img src="7vs7-image-2.jpg">
           </div>
           <div class="info">
             <ul class="unordered-list">
