--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <div class="header-container">
-        <div class="menu-icon">
+        <div class="menu-icon" onclick="showMenu()">
           <div class="menu-line"></div>
           <div class="menu-line"></div>
           <div class="menu-line"></div>
@@ -27,6 +27,7 @@
           </a>
         </div>
         <div class="nav-menu">
+          <div class="close-menu" onclick="closeMenu()">X</div>
           <a class="menu-item link" href="location.html">Locatie</a>
           <a class="menu-item link" href="contact.html">Contact</a>
           <div class="menu-item dropdown-link">Informatie
