add menu-file, add swipe-function and add wat-is-7v7 content

--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="header-container">
-        <div class="menu-icon">
+        <div class="menu-icon" onclick="showMenu()">
           <div class="menu-line"></div>
           <div class="menu-line"></div>
           <div class="menu-line"></div>
@@ -26,8 +26,18 @@
           </a>
         </div>
         <div class="nav-menu">
-          <div class="menu-item link">Locatie</div>
-          <div class="menu-item link">Contact</div>
+          <div class="close-menu" onclick="closeMenu()">X</div>
+          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="contact.html">Contact</a>
+          <div class="menu-item dropdown-link">Informatie
+            <div class="dropdown-container">
+              <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
+              <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
+              <a class="menu-item link" href="regels.html">Regels</a>
+              <a class="menu-item link" href="kosten.html">Prijzen</a>
+            </div>
+          </div>
+          <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
         </div>
       </div>
     </header>
@@ -108,5 +118,6 @@
     <div class="spacer-sm"></div>
     <footer></footer>
     <script src="form.js"></script>
+    <script src="menu.js"></script>
   </body>
 </html>
