--- a/regels.html
+++ b/regels.html
@@ -17,7 +17,7 @@
   <body>
     <header>
       <div class="header-container">
-        <div class="menu-icon">
+        <div class="menu-icon" onclick="showMenu()">
           <div class="menu-line"></div>
           <div class="menu-line"></div>
           <div class="menu-line"></div>
@@ -28,8 +28,17 @@
           </a>
         </div>
         <div class="nav-menu">
-          <div class="menu-item link">Locatie</div>
-          <div class="menu-item link">Contact</div>
+          <div class="close-menu" onclick="closeMenu()">X</div>
+          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="contact.html">Contact</a>
+          <div class="menu-item dropdown-link">Informatie
+            <div class="dropdown-container">
+              <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
+              <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
+              <a class="menu-item link" href="regels.html">Regels</a>
+              <a class="menu-item link" href="kosten.html">Prijzen</a>
+            </div>
+          </div>
           <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
         </div>
       </div>
@@ -38,7 +47,7 @@
     <div class="page-wrapper">
 
       <div class="banner">
-        <div class="banner-wrapper rules">
+        <div class="banner-wrapper page">
           <div class="headings">
             <h2>Regels voor</h2>
             <div class="7v7-wrapper">
@@ -133,6 +142,6 @@
         </div>
       </div>
     </footer>
-
+    <script src="menu.js"></script>
   </body>
 </html>
