Animation on menu-icon and lil fixes

--- a/kosten.html
+++ b/kosten.html
@@ -15,10 +15,10 @@
   <body>
     <header>
       <div class="header-container">
-        <div class="menu-icon" onclick="showMenu()">
-          <div class="menu-line"></div>
-          <div class="menu-line"></div>
-          <div class="menu-line"></div>
+        <div class="menu-icon" onclick="toggleMenu()">
+          <div class="menu-line one"></div>
+          <div class="menu-line two"></div>
+          <div class="menu-line three"></div>
         </div>
         <div class="logo">
           <a href="index.html">
@@ -26,7 +26,6 @@
           </a>
         </div>
         <div class="nav-menu">
-          <div class="close-menu" onclick="closeMenu()">X</div>
           <a class="menu-item link" href="location.html">Locatie</a>
           <a class="menu-item link" href="contact.html">Contact</a>
           <div class="menu-item dropdown-link">Informatie
