--- a/form.html
+++ b/form.html
@@ -15,10 +15,10 @@
   <body>
     <header>
       <div class="header-container">
-        <div class="menu-icon" onclick="showMenu()">
-          <div class="menu-line"></div>
-          <div class="menu-line"></div>
-          <div class="menu-line"></div>
+        <div class="menu-icon" onclick="toggleMenu()">
+          <div class="menu-line one"></div>
+          <div class="menu-line two"></div>
+          <div class="menu-line three"></div>
         </div>
         <div class="logo">
           <a href="index.html">
@@ -26,7 +26,6 @@
           </a>
         </div>
         <div class="nav-menu">
-          <div class="close-menu" onclick="closeMenu()">X</div>
           <a class="menu-item link" href="location.html">Locatie</a>
           <a class="menu-item link" href="contact.html">Contact</a>
           <div class="menu-item dropdown-link">Informatie
@@ -93,11 +92,11 @@
               </div>
               <div class="form-input">
                 <div class="radio-button">
-                  <input type="radio" id="team" name="high-or-low" value="team" onchange="showTeam()">
+                  <input type="radio" id="team" name="high-or-low" value="team">
                   <label for="team">Hoge Klasse</label>
                 </div>
                 <div class="radio-button">
-                  <input type="radio" id="individu" name="high-or-low" value="individu" onchange="hideTeam()">
+                  <input type="radio" id="individu" name="high-or-low" value="individu">
                   <label for="individu">Lage Klasse</label>
                 </div>
               </div>
@@ -116,7 +115,19 @@
 
     </div>
     <div class="spacer-sm"></div>
-    <footer></footer>
+    <footer>
+      <div class="footer-container">
+        <img alt="7vs7" src="7V7-logo.png">
+        <div class="footer-menu-items">
+          <a class="menu-item link" href="location.html">Locatie</a>
+          <a class="menu-item link" href="contact.html">Contact</a>
+          <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
+          <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
+          <a class="menu-item link" href="regels.html">Regels</a>
+          <a class="menu-item link" href="kosten.html">Prijzen</a>
+        </div>
+      </div>
+    </footer>
     <script src="form.js"></script>
     <script src="menu.js"></script>
   </body>
