--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <body>
     <header>
       <div class="header-container">
-        <div class="menu-icon" onclick="showMenu()">
-          <div class="menu-line"></div>
-          <div class="menu-line"></div>
-          <div class="menu-line"></div>
+        <div class="menu-icon" onclick="toggleMenu()">
+          <div class="menu-line one"></div>
+          <div class="menu-line two"></div>
+          <div class="menu-line three"></div>
         </div>
         <div class="logo">
           <a href="index.html">
@@ -27,7 +27,6 @@
           </a>
         </div>
         <div class="nav-menu">
-          <div class="close-menu" onclick="closeMenu()">X</div>
           <a class="menu-item link" href="location.html">Locatie</a>
           <a class="menu-item link" href="contact.html">Contact</a>
           <div class="menu-item dropdown-link">Informatie
@@ -80,21 +79,7 @@
 
       <div class="cards-wrapper">
         <div class="cards-container">
-          <div class="card card-one efficacy">
-            <div class="card-image">
-              <img src="7vs7-how-work.jpg">
-              <img class="logo-in-card" src="7V7-logo.png">
-            </div>
-            <div class="card-body">
-              <h2 class="card-title">Wat is 7vs7?</h2>
-              <p class="card-text">
-                7vs7 is de voetbalcompetitie in Haarlem waarbij er niet 11 tegen 11 wordt gespeeld,
-                maar 7 tegen 7 op een half veld. Het is niet zo dwingend als een echte voetbalclub, maar ongedwongen waarbij het vooral draait om plezier in het voetballen!
-              </p>
-              <a class="link" href="wat-is-7vs7.html">Lees meer</a>
-            </div>
-          </div>
-          <div class="card audience">
+          <div class="card card-one audience">
             <div class="card-image">
               <img src="7vs7-image-goal.jpg">
             </div>
@@ -105,6 +90,20 @@
                 maar toch zo nu en dan een wedstrijd willen spelen. Bovendien is het leuk voor bedrijven die op zoek zijn naar activiteiten voor hun personeel.
               </p>
               <a class="link" href="voor-wie.html">Lees meer</a>
+            </div>
+          </div>
+          <div class="card efficacy">
+            <div class="card-image">
+              <img src="7vs7-how-work.jpg">
+              <img class="logo-in-card" src="7V7-logo.png">
+            </div>
+            <div class="card-body">
+              <h2 class="card-title">Hoe werkt het?</h2>
+              <p class="card-text">
+                7vs7 is de voetbalcompetitie in Haarlem waarbij er niet 11 tegen 11 wordt gespeeld,
+                maar 7 tegen 7 op een half veld. Het is niet zo dwingend als een echte voetbalclub, maar ongedwongen waarbij het vooral draait om plezier in het voetballen!
+              </p>
+              <a class="link" href="wat-is-7vs7.html">Lees meer</a>
             </div>
           </div>
           <div class="card rules">
