--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
               <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
               <a class="menu-item link" href="regels.html">Regels</a>
-              <a class="menu-item link" href="kosten.html">Prijzen</a>
+              <a class="menu-item link" href="kosten.html">Wat kost het?</a>
             </div>
           </div>
           <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
@@ -176,7 +176,7 @@
           <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
           <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
           <a class="menu-item link" href="regels.html">Regels</a>
-          <a class="menu-item link" href="kosten.html">Prijzen</a>
+          <a class="menu-item link" href="kosten.html">Wat kost het?</a>
         </div>
       </div>
     </footer>
