--- a/regels.html
+++ b/regels.html
@@ -35,7 +35,7 @@
               <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
               <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
               <a class="menu-item link" href="regels.html">Regels</a>
-              <a class="menu-item link" href="kosten.html">Prijzen</a>
+              <a class="menu-item link" href="kosten.html">Wat kost het?</a>
             </div>
           </div>
           <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
@@ -106,7 +106,10 @@
           </div>
         </div>
         <div class="spacer-sm"></div>
-        <div class="row">
+        <div class="row second">
+          <div class="image">
+            <img src="img-info.jpg">
+          </div>
           <div class="info">
             <ul class="unordered-list">
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Elk team dient dezelfde kleuren te dragen van de tenues. Elk team mag uiteraard z’n eigen kleuren verzinnen</li>
@@ -118,9 +121,6 @@
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Een schouderduw is toegestaan</li>
               <li class="list-item"><iconify-icon class="usp-icon" icon="mdi:whistle"></iconify-icon>Er is geen buitenspel bij 7 versus 7</li>
             </ul>
-          </div>
-          <div class="image">
-            <img src="img-info.jpg">
           </div>
         </div>
       </div>
@@ -137,7 +137,7 @@
           <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
           <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
           <a class="menu-item link" href="regels.html">Regels</a>
-          <a class="menu-item link" href="kosten.html">Prijzen</a>
+          <a class="menu-item link" href="kosten.html">Wat kost het?</a>
         </div>
       </div>
     </footer>
