--- a/wat-is-7vs7.html
+++ b/wat-is-7vs7.html
@@ -35,7 +35,7 @@
               <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
               <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
               <a class="menu-item link" href="regels.html">Regels</a>
-              <a class="menu-item link" href="kosten.html">Prijzen</a>
+              <a class="menu-item link" href="kosten.html">Wat kost het?</a>
             </div>
           </div>
           <a class="menu-item link menu-button" href="form.html">Meld je nu aan!</a>
@@ -83,7 +83,10 @@
           </div>
         </div>
         <div class="spacer-sm"></div>
-        <div class="row">
+        <div class="row second">
+          <div class="image">
+            <img src="img-info.jpg">
+          </div>
           <div class="info">
             <h3>Vanuit de organisatie:</h3>
             <ul class="unordered-list">
@@ -96,9 +99,6 @@
               <li class="list-item"><i class="fa-regular fa-futbol usp-icon"></i>Kleedkamers</li>
               <li class="list-item">Zo simpel kan het zijn! Voor eventuele vragen kan er gemaild worden naar info@7versus7.nl</li>
             </ul>
-          </div>
-          <div class="image">
-            <img src="img-info.jpg">
           </div>
         </div>
       </div>
@@ -115,7 +115,7 @@
           <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
           <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
           <a class="menu-item link" href="regels.html">Regels</a>
-          <a class="menu-item link" href="kosten.html">Prijzen</a>
+          <a class="menu-item link" href="kosten.html">Wat kost het?</a>
         </div>
       </div>
     </footer>
