--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Voor wie is 7vs7?</title>
+    <title>7vs7</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/23ac1fdc5c.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -40,7 +41,10 @@
         </div>
       </div>
     </header>
-    <div class="page-wrapper"></div>
+
+    <div class="page-wrapper">
+
+    </div>
     <div class="spacer-sm"></div>
     <footer>
       <div class="footer-container">
