--- a/location.html
+++ b/location.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>7vs7 Formulier</title>
+    <title>7vs7</title>
     <meta http-equiv="content-type" content="text/html;charset=utf-8" />
     <link rel="icon" type="image/png" href="7V7-logo.png" sizes="16x16">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/23ac1fdc5c.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -43,7 +44,7 @@
 
     <div class="page-wrapper">
 
-      <div class="banner banner-with-form">
+      <div class="banner">
         <div class="banner-wrapper">
           <div class="headings">
             <div class="7v7-wrapper">
@@ -51,67 +52,11 @@
             </div>
             <h2>Het haarlemse voetbaltoernooi!</h2>
           </div>
-          <div class="form-container">
-            <form class="submit-form">
-              <div class="form-input">
-                <div class="label">Voornaam (Verplicht)</div>
-                <input class="input first-name" placeholder="Voornaam">
-              </div>
-              <div class="form-input">
-                <div class="label">Achternaam (Verplicht)</div>
-                <input class="input last-name" placeholder="Achternaam">
-              </div>
-              <div class="form-input">
-                <div class="label">Telefoonnummer (Verplicht)</div>
-                <input class="input phone-number" placeholder="Telefoonnummer">
-              </div>
-              <div class="form-input">
-                <div class="label">Emailadres (Verplicht)</div>
-                <input class="input email-address" placeholder="Emailadres">
-              </div>
-              <div class="radio-label">
-                Wil je je inschrijven als team of als individu?
-              </div>
-              <div class="form-input">
-                <div class="radio-button">
-                  <input type="radio" id="team" name="team-or-individu" value="team" onchange="showTeam()">
-                  <label for="team">Vriendenteam</label>
-                </div>
-                <div class="radio-button">
-                  <input type="radio" id="individu" name="team-or-individu" value="individu" onchange="hideTeam()">
-                  <label for="individu">Individueel</label>
-                </div>
-                <div class="radio-button">
-                  <input type="radio" id="company" name="team-or-individu" value="individu" onchange="showTeam()">
-                  <label for="individu">Bedrijfsteam</label>
-                </div>
-              </div>
-              <div class="form-input team-name-input">
-                <div class="label">Teamnaam (Optioneel)</div>
-                <input class="input team-name" placeholder="Teamnaam">
-              </div>
-              <div class="form-input">
-                <div class="radio-button">
-                  <input type="radio" id="team" name="high-or-low" value="team">
-                  <label for="team">Hoge Klasse</label>
-                </div>
-                <div class="radio-button">
-                  <input type="radio" id="individu" name="high-or-low" value="individu">
-                  <label for="individu">Lage Klasse</label>
-                </div>
-              </div>
-              <div class="submit-button" onclick="displayForm()">
-                Meld je nu aan!
-              </div>
-            </form>
-          </div>
           <div class="image">
             <img alt="7vs7-banner" src="7vs7-banner.jpg">
           </div>
         </div>
       </div>
-
-      <div class="spacer-sm"></div>
 
     </div>
     <div class="spacer-sm"></div>
@@ -128,7 +73,6 @@
         </div>
       </div>
     </footer>
-    <script src="form.js"></script>
     <script src="menu.js"></script>
   </body>
 </html>
