--- a/wat-is-7vs7.html
+++ b/wat-is-7vs7.html
@@ -49,7 +49,7 @@
         <div class="banner-wrapper page">
           <div class="headings">
             <h2>Hoe werkt</h2>
-            <div class="7v7-wrapper">
+            <div class="seven-wrapper">
               <h2 class="number">7</h2><h2 class="versus">versus</h2><h2 class="number">7</h2>
             </div>
           </div>
