--- a/form.html
+++ b/form.html
@@ -46,7 +46,7 @@
       <div class="banner banner-with-form">
         <div class="banner-wrapper">
           <div class="headings">
-            <div class="7v7-wrapper">
+            <div class="seven-wrapper">
               <h1 class="number">7</h1><h1 class="versus">versus</h1><h1 class="number">7</h1>
             </div>
             <h2>Het haarlemse voetbaltoernooi!</h2>
