--- a/location.html
+++ b/location.html
@@ -47,7 +47,7 @@
       <div class="banner">
         <div class="banner-wrapper">
           <div class="headings">
-            <div class="7v7-wrapper">
+            <div class="seven-wrapper">
               <h1 class="number">7</h1><h1 class="versus">versus</h1><h1 class="number">7</h1>
             </div>
             <h2>Het haarlemse voetbaltoernooi!</h2>
