--- a/location.html
+++ b/location.html
@@ -44,17 +44,13 @@
 
     <div class="page-wrapper">
 
-      <div class="banner">
-        <div class="banner-wrapper">
-          <div class="headings">
-            <div class="seven-wrapper">
-              <h1 class="number">7</h1><h1 class="versus">versus</h1><h1 class="number">7</h1>
-            </div>
-            <h2>Het haarlemse voetbaltoernooi!</h2>
-          </div>
-          <div class="image">
-            <img alt="7vs7-banner" src="7vs7-banner.jpg">
-          </div>
+      <div class="spacer-sm"></div>
+
+      <div class="location-thb">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24175.09560401777!2d4.60825065838448!3d52.3730039604012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c5ef305c3e0f63%3A0xb6f587a06e6e4083!2sTHB%20voetbal!5e0!3m2!1snl!2snl!4v1670762796857!5m2!1snl!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="location-info">
+          <h3>Adres</h3>
+          <p>Wagenweg 240B, 2012 NP Haarlem</p>
         </div>
       </div>
 
