add images and fix logo-click

--- a/kosten.html
+++ b/kosten.html
@@ -40,6 +40,38 @@
         </div>
       </div>
     </header>
+
+    <div class="page-wrapper">
+
+      <div class="banner">
+        <div class="banner-wrapper">
+          <!-- <div class="headings">
+            <h2>Hoe werkt</h2>
+            <div class="seven-wrapper">
+              <h2 class="number">7</h2><h2 class="versus">versus</h2><h2 class="number">7</h2>
+            </div>
+          </div> -->
+          <div class="image">
+            <img alt="7vs7-banner" src="7vs7-price.jpg">
+          </div>
+        </div>
+      </div>
+
+      <div class="spacer-sm"></div>
+
+      <footer>
+        <div class="footer-container">
+          <img alt="7vs7" src="7V7-logo.png">
+          <div class="footer-menu-items">
+            <a class="menu-item link" href="location.html">Locatie</a>
+            <a class="menu-item link" href="contact.html">Contact</a>
+            <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
+            <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
+            <a class="menu-item link" href="regels.html">Regels</a>
+            <a class="menu-item link" href="kosten.html">Wat kost het?</a>
+          </div>
+        </div>
+      </footer>
     <script src="menu.js"></script>
   </body>
 </html>
