--- a/regels.html
+++ b/regels.html
@@ -54,7 +54,7 @@
             </div>
           </div>
           <div class="image">
-            <img alt="7vs7-banner" src="7vs7-banner.jpg">
+            <img alt="7vs7-banner" src="7vs7-rules.jpg">
           </div>
         </div>
       </div>
@@ -126,6 +126,7 @@
       </div>
 
     </div>
+
     <div class="spacer-sm"></div>
 
     <footer>
