--- a/wat-is-7vs7.html
+++ b/wat-is-7vs7.html
@@ -46,15 +46,15 @@
     <div class="page-wrapper">
 
       <div class="banner">
-        <div class="banner-wrapper page">
-          <div class="headings">
+        <div class="banner-wrapper">
+          <!-- <div class="headings">
             <h2>Hoe werkt</h2>
             <div class="seven-wrapper">
               <h2 class="number">7</h2><h2 class="versus">versus</h2><h2 class="number">7</h2>
             </div>
-          </div>
+          </div> -->
           <div class="image">
-            <img alt="7vs7-banner" src="7vs7-banner.jpg">
+            <img alt="7vs7-banner" src="7vs7-how-work.jpg">
           </div>
         </div>
       </div>
