--- a/voor-wie.html
+++ b/voor-wie.html
@@ -40,7 +40,26 @@
         </div>
       </div>
     </header>
-    <div class="page-wrapper"></div>
+
+
+    <div class="page-wrapper">
+
+      <div class="banner">
+        <div class="banner-wrapper">
+          <!-- <div class="headings">
+            <h2>Hoe werkt</h2>
+            <div class="seven-wrapper">
+              <h2 class="number">7</h2><h2 class="versus">versus</h2><h2 class="number">7</h2>
+            </div>
+          </div> -->
+          <div class="image">
+            <img alt="7vs7-banner" src="7vs7-image-goal.jpg">
+          </div>
+        </div>
+      </div>
+
+    </div>
+
     <div class="spacer-sm"></div>
     <footer>
       <div class="footer-container">
