implement red color from logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a class="menu-item link" href="contact.html">Contact</a>
           <div class="menu-item dropdown-link">Informatie
             <div class="dropdown-container">
-              <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
+              <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
               <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
               <a class="menu-item link" href="regels.html">Regels</a>
               <a class="menu-item link" href="kosten.html">Wat kost het?</a>
@@ -103,7 +103,7 @@
                 7vs7 is de voetbalcompetitie in Haarlem waarbij er niet 11 tegen 11 wordt gespeeld,
                 maar 7 tegen 7 op een half veld. Het is niet zo dwingend als een echte voetbalclub, maar ongedwongen waarbij het vooral draait om plezier in het voetballen!
               </p>
-              <a class="link" href="wat-is-7vs7.html">Lees meer</a>
+              <a class="link" href="hoe-werkt-het.html">Lees meer</a>
             </div>
           </div>
           <div class="card rules">
@@ -173,7 +173,7 @@
         <div class="footer-menu-items">
           <a class="menu-item link" href="location.html">Locatie</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
+          <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
           <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
           <a class="menu-item link" href="regels.html">Regels</a>
           <a class="menu-item link" href="kosten.html">Wat kost het?</a>
