--- a/voor-wie.html
+++ b/voor-wie.html
@@ -30,7 +30,7 @@
           <a class="menu-item link" href="contact.html">Contact</a>
           <div class="menu-item dropdown-link">Informatie
             <div class="dropdown-container">
-              <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
+              <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
               <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
               <a class="menu-item link" href="regels.html">Regels</a>
               <a class="menu-item link" href="kosten.html">Wat kost het?</a>
@@ -67,7 +67,7 @@
         <div class="footer-menu-items">
           <a class="menu-item link" href="location.html">Locatie</a>
           <a class="menu-item link" href="contact.html">Contact</a>
-          <a class="menu-item link" href="wat-is-7vs7.html">Hoe werkt het?</a>
+          <a class="menu-item link" href="hoe-werkt-het.html">Hoe werkt het?</a>
           <a class="menu-item link" href="voor-wie.html">Voor wie is het?</a>
           <a class="menu-item link" href="regels.html">Regels</a>
           <a class="menu-item link" href="kosten.html">Wat kost het?</a>
