fix height images

--- a/regels.html
+++ b/regels.html
@@ -46,7 +46,7 @@
     <div class="page-wrapper">
 
       <div class="banner">
-        <div class="banner-wrapper page">
+        <div class="banner-wrapper sm">
           <div class="headings">
             <h2>Regels voor</h2>
             <div class="seven-wrapper">
