Add content for-who page

--- a/voor-wie.html
+++ b/voor-wie.html
@@ -46,16 +46,98 @@
 
       <div class="banner">
         <div class="banner-wrapper">
-          <!-- <div class="headings">
-            <h2>Hoe werkt</h2>
+          <div class="headings">
+            <h2>Voor wie is</h2>
             <div class="seven-wrapper">
-              <h2 class="number">7</h2><h2 class="versus">versus</h2><h2 class="number">7</h2>
+              <h1 class="number">7</h1><h1 class="versus">versus</h1><h1 class="number">7</h1>
             </div>
-          </div> -->
+          </div>
           <div class="image">
             <img alt="7vs7-banner" src="7vs7-image-goal.jpg">
           </div>
         </div>
+      </div>
+
+      <div class="spacer-sm"></div>
+
+      <div class="for-who-wrapper">
+
+        <div class="intro">
+          7 Versus 7 is voor iedereen die van het spelletje voetbal houdt.
+          Jonge mensen, oude mensen, vrouwen, iedereen die nog nooit een bal heeft aangeraakt maar het toch leuk lijkt om een balletje te trappen
+        </div>
+
+        <div class="row-for-who">
+          <div class="symbol">
+            <div class="circle"></div>
+          </div>
+          <div class="for-who-text">
+            "Ik ben iemand die van voetbal houd maar geen tijd heeft om 2x per week te trainen en in het weekend nog een wedstrijd te spelen.
+            Voetbal is voor mij een uitlaatklep en ik vind het heerlijk om een voetbalwedstrijdje te spelen wat ook nog competitief is"
+          </div>
+        </div>
+        <div class="row-for-who">
+          <div class="symbol">
+            <div class="circle"></div>
+          </div>
+          <div class="for-who-text">
+            "Ik heb een fulltime job en geen tijd voor selectie voetbal of 2 tot 3 keer per week aanwezig te zijn bij een club.
+            Toch vind ik het heerlijk om een wedstrijdje te kunnen spelen.
+            Er zijn weinig mogelijkheden die mij aanbieden om toch nog deel te kunnen nemen aan mijn favoriete sport"
+          </div>
+        </div>
+        <div class="row-for-who">
+          <div class="symbol">
+            <div class="circle"></div>
+          </div>
+          <div class="for-who-text">
+            "Wij zijn een bedrijf die in de pauzes altijd praten over voetbal.
+            Wij zien geen mogelijkheid om samen een team op te kunnen zetten.
+            Wij denken wel dat een voetbalteam oprichten goed kan zijn voor de motivatie binnen ons bedrijf en het teamverband"
+          </div>
+        </div>
+        <div class="row-for-who">
+          <div class="symbol">
+            <div class="circle"></div>
+          </div>
+          <div class="for-who-text">
+            "Ik wil graag voetballen maar kan geen team vinden.
+            Toch hou ik heel erg van het spelletje.
+            Bij een voetbalclub vind ik het allemaal net even te serieus worden.
+            Ik wil graag alleen elke week een wedstrijdje spelen"
+          </div>
+        </div>
+        <div class="row-for-who">
+          <div class="symbol">
+            <div class="circle"></div>
+          </div>
+          <div class="for-who-text">
+            "Ik ben iemand die graag nieuwe mensen wilt leren kennen.
+            Ik heb geen moeite met mezelf aan te passen en kan prima functioneren in teamverband"
+          </div>
+        </div>
+        <div class="row-for-who">
+          <div class="symbol">
+            <div class="circle"></div>
+          </div>
+          <div class="for-who-text">
+            "Ik heb een vriendengroep waarmee we graag een team willen opstarten.
+            Wij willen niet elke week hoeven trainen maar alleen wedstrijden spelen"
+          </div>
+        </div>
+        <div class="row-for-who">
+          <div class="symbol">
+            <div class="circle"></div>
+          </div>
+          <div class="for-who-text">
+            "Ik ben zojuist verhuisd vanuit het buitenland naar Nederland.
+            Ik hou van voetbal maar heb weinig mensen om me heen die er ook van houden.
+            Ik zou het super leuk vinden om hier elke week een balletje te kunnen trappen en nieuwe mensen te leren kennen"
+          </div>
+        </div>
+
+
+
       </div>
 
     </div>
